--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,21 @@
+@font-face {
+  font-family: "Roboto";
+  src: local("Roboto-Regular"), url("../fonts/RobotoRegular.woff2") format("woff2"),
+    url("../fonts/RobotoRegular.woff") format("woff");
+  font-display: swap;
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Roboto";
+  src: local("Roboto-Bold"), url("../fonts/RobotoBold.woff2") format("woff2"),
+    url("../fonts/RobotoBold.woff") format("woff");
+  font-display: swap;
+  font-weight: 700;
+  font-style: normal;
+}
+
 /* :root {
 
 } */
@@ -86,3 +104,4 @@ p {
 .section-hero__img {
   border-radius: 100%;
 }
+
