--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,7 @@ p {
 
 .title {
   margin: 0;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
   padding: 0;
 }
 
@@ -143,12 +143,47 @@ p {
 
 .section-contact__title {
   font-size: 32px;
+  text-align: center;
+}
+
+.section-contact__list {
+  justify-content: space-between;
 }
 
 .section-contact__item {
+  margin-right: 30px;
   margin-bottom: 10px;
+  padding-top: 50px;
+
+  background-repeat: no-repeat;
+  background-position: center top;
+  background-size: 35px 35px;
 }
 
-.section-contact__descr {
+.section-contact__item--image-1 {
+  background-image: url("../assets/img/section-contact/gps.svg");
+}
+
+.section-contact__item--image-2 {
+  background-image: url("../assets/img/section-contact/phone.svg");
+}
+
+.section-contact__item--image-3 {
+  background-image: url("../assets/img/section-contact/email.svg");
+}
+
+.section-contact__item--image-4 {
+  background-image: url("../assets/img/section-contact/telegram.svg");
+}
+
+.section-contact__item--image-5 {
+  background-image: url("../assets/img/section-contact/discord.svg");
+}
+
+.section-contact__item--image-6 {
+  background-image: url("../assets/img/section-contact/linkedin.svg");
+}
+
+.section-contact__descr:not(:first-child) {
   font-style: italic;
 }
