--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,8 @@ p {
   margin: 0;
   margin-bottom: 30px;
   padding: 0;
+
+  text-align: center;
 }
 
 /* header */
@@ -94,7 +96,7 @@ p {
   padding-top: 5px;
   padding-bottom: 5px;
 
-  background-color: #faebd7;
+  background-color: #dbd6d6;
   border-bottom: 1px solid #666666;
 }
 
@@ -117,8 +119,12 @@ p {
 /* section-hero */
 
 .section-hero__img {
-  border-radius: 100%;
   height: 300px;
+
+  border-radius: 100%;
+  border: 4px solid #000000;
+  box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.6);
+  filter: grayscale(60%);
 }
 
 .section-hero__left {
@@ -143,7 +149,7 @@ p {
 
 .section-contact__title {
   font-size: 32px;
-  text-align: center;
+  /* text-align: center; */
 }
 
 .section-contact__list {
@@ -188,9 +194,9 @@ p {
 
 /* section-about */
 
-.section-about__title {
+/* .section-about__title {
   text-align: center;
-}
+} */
 
 .section-about__descr {
   text-indent: 30px;
@@ -203,9 +209,9 @@ p {
 
 /* section-skills */
 
-.section-skills__title {
+/* .section-skills__title {
   text-align: center;
-}
+} */
 
 .section-skills__subtitle {
   padding-left: 30px;
@@ -234,9 +240,9 @@ p {
 
 /* section-projects */
 
-.section-projects__title {
+/* .section-projects__title {
   text-align: center;
-}
+} */
 
 .section-projects__descr {
   text-align: center;
@@ -260,7 +266,7 @@ p {
   background-size: contain;
   border-radius: 10px;
   box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
-
+  filter: grayscale(65%);
 }
 
 .section-projects__item--image-1 {
@@ -283,4 +289,51 @@ p {
   text-decoration: underline;
 }
 
+/* section-code */
+
+/* .section-code__title {
+  text-align: center;
+} */
+
+.section-code__content {
+  justify-content: center;
+}
+
+.section-code__example {
+  margin: 0;
+}
+
+/* section-education */
+
+.section-education__descr {
+  text-indent: 30px;
+  line-height: 26px;
+}
+
+.section-education__descr:not(:last-child) {
+  margin-bottom: 20px;
+}
+
+/* section-languages */
+
+.section-languages__list {
+  justify-content: space-around;
+}
+
+/* footer */
+
+.footer {
+  padding: 20px 0;
+
+  background-color: #dbd6d6;
+}
+
+.footer__content {
+  justify-content: space-between;
+  align-items: center;
+}
+
+.footer__logo {
+  width: 125px;
+}
 
