--- a/css/style.css
+++ b/css/style.css
@@ -104,6 +104,10 @@ p {
   align-items: center;
 }
 
+.header__burger {
+  display: none;
+}
+
 .header__logo-link {
   margin-right: auto;
 }
@@ -114,6 +118,15 @@ p {
 
 .nav__item:not(:last-child) {
   margin-right: 30px;
+}
+
+.header__burger {
+  height: 23px;
+  width: 30px;
+  background-image: url("../assets/img/header/burger.svg");
+  background-position: center right;
+  background-repeat: no-repeat;
+  background-size: 30px 23px;
 }
 
 /* section-hero */
@@ -149,7 +162,6 @@ p {
 
 .section-contact__title {
   font-size: 32px;
-  /* text-align: center; */
 }
 
 .section-contact__list {
@@ -194,10 +206,6 @@ p {
 
 /* section-about */
 
-/* .section-about__title {
-  text-align: center;
-} */
-
 .section-about__descr {
   text-indent: 30px;
   line-height: 26px;
@@ -209,10 +217,6 @@ p {
 }
 
 /* section-skills */
-
-/* .section-skills__title {
-  text-align: center;
-} */
 
 .section-skills__content {
   justify-content: space-around;
@@ -245,10 +249,6 @@ p {
 
 /* section-projects */
 
-/* .section-projects__title {
-  text-align: center;
-} */
-
 .section-projects__descr {
   text-align: center;
 }
@@ -274,6 +274,10 @@ p {
   filter: grayscale(65%);
 }
 
+.section-projects__item:not(:last-child) {
+  margin-bottom: 20px;
+}
+
 .section-projects__item--image-1 {
   background-image: url("../assets/img/section-projects/lagoona.png");
 }
@@ -295,10 +299,6 @@ p {
 }
 
 /* section-code */
-
-/* .section-code__title {
-  text-align: center;
-} */
 
 .section-code__content {
   justify-content: center;
@@ -342,4 +342,3 @@ p {
 .footer__logo {
   width: 125px;
 }
-
