--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,16 @@
 }
 
 :root {
+  --color-pomegranate: #f85617;
+  --color-swiss-coffee: #dbd6d6;
+  --color-dove-gray: #666666;
+  --color-alto: #cfcfcf;
+  --color-black: #000000;
+  --color-state-gray: #7a8a96;
+  --color-loblolly: #bdc5cb;
 
+  --size-gap: 20px;
+  --size-mb: 20px;
 }
 
 html {
@@ -37,23 +46,28 @@ img {
 a {
   color: inherit;
   text-decoration: none;
+
+  transition: color 0.2s ease-in-out;
 }
 
 body {
   min-width: 320px;
+
   font-family: "Roboto", sans-serif;
 }
 
 .list-reset {
   margin: 0;
   padding: 0;
+
   list-style: none;
 }
 
 .btn-reset {
-  border: none;
   padding: 0;
+
   background-color: transparent;
+  border: none;
   cursor: pointer;
 }
 
@@ -79,7 +93,7 @@ p {
   padding-top: 50px;
   padding-bottom: 50px;
 
-  border-bottom: 1px solid #666666;
+  border-bottom: 1px solid var(--color-dove-gray);
 }
 
 .title {
@@ -90,14 +104,23 @@ p {
   text-align: center;
 }
 
+.descr {
+  line-height: 26px;
+  text-align: center;
+}
+
+.link:hover {
+  color: var(--color-pomegranate);
+}
+
 /* header */
 
 .header {
   padding-top: 5px;
   padding-bottom: 5px;
 
-  background-color: #dbd6d6;
-  border-bottom: 1px solid #666666;
+  background-color: var(--color-swiss-coffee);
+  border-bottom: 1px solid var(--color-dove-gray);
 }
 
 .header__content {
@@ -123,6 +146,7 @@ p {
 .header__burger {
   height: 23px;
   width: 30px;
+
   background-image: url("../assets/img/header/burger.svg");
   background-position: center right;
   background-repeat: no-repeat;
@@ -135,9 +159,15 @@ p {
   height: 300px;
 
   border-radius: 100%;
-  border: 4px solid #000000;
-  box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.6);
-  filter: grayscale(60%);
+  border: 4px solid var(--color-black);
+  box-shadow: 4px 4px 8px 0px var(--color-state-gray);
+  filter: grayscale(70%);
+
+  transition: filter 0.2s ease-in-out;
+}
+
+.section-hero__img:hover {
+  filter: none;
 }
 
 .section-hero__left {
@@ -166,6 +196,7 @@ p {
 
 .section-contact__list {
   justify-content: space-between;
+  gap: var(--size-gap);
 }
 
 .section-contact__item {
@@ -206,14 +237,8 @@ p {
 
 /* section-about */
 
-.section-about__descr {
-  text-indent: 30px;
-  line-height: 26px;
-  text-align: center;
-}
-
 .section-about__descr:not(:last-child) {
-  margin-bottom: 20px;
+  margin-bottom: var(--size-mb);
 }
 
 /* section-skills */
@@ -223,8 +248,8 @@ p {
 }
 
 .section-skills__subtitle {
+  margin-bottom: var(--size-mb);
   padding-left: 30px;
-  margin-bottom: 20px;
 
   background-position: left center;
   background-repeat: no-repeat;
@@ -249,33 +274,26 @@ p {
 
 /* section-projects */
 
-.section-projects__descr {
-  text-align: center;
-}
-
 .section-projects__content {
   padding-top: 30px;
 }
 
 .section-projects__list {
   justify-content: space-around;
+  gap: var(--size-gap);
 }
 
 .section-projects__item {
   padding: 20px;
   padding-top: 330px;
 
-  background-color: #cfcfcf;
+  background-color: var(--color-alto);
   background-position: top center;
   background-repeat: no-repeat;
   background-size: contain;
   border-radius: 10px;
-  box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
+  box-shadow: 4px 4px 8px 0px var(--color-loblolly);
   filter: grayscale(65%);
-}
-
-.section-projects__item:not(:last-child) {
-  margin-bottom: 20px;
 }
 
 .section-projects__item--image-1 {
@@ -310,14 +328,8 @@ p {
 
 /* section-education */
 
-.section-education__descr {
-  text-indent: 30px;
-  line-height: 26px;
-  text-align: center;
-}
-
 .section-education__descr:not(:last-child) {
-  margin-bottom: 20px;
+  margin-bottom: var(--size-mb);
 }
 
 /* section-languages */
@@ -331,7 +343,7 @@ p {
 .footer {
   padding: 20px 0;
 
-  background-color: #dbd6d6;
+  background-color: var(--color-swiss-coffee);
 }
 
 .footer__content {
